--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ html {
     font-family: 'Roboto', sans-serif;
 
     margin: 0;
+    
+    min-width: 920px;
 }
 
 
@@ -49,18 +51,25 @@ a {
 /* FIRST SECTION + elements */
 .first-section {
     background-color: #1F2937;
-    height: 250px;
+    height: 280px;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 20px;
+    padding-bottom: 100px;
 }
 
 .content-div-first-section {
     display: flex;
-    width: 70%;
-    height: 200px;
+    width: 75%;
+    height: 250px;
     gap: 50px;
+    flex-shrink: 1;
+
+    min-width: 550px;
+
+
+    padding: 30px;
 }
 
 .image-placeholder-div {
@@ -70,6 +79,9 @@ a {
     align-items: center;
     width: 50%;
     color: #E5E7EB;
+    padding: 20px;
+
+
 }
 
 
@@ -87,7 +99,9 @@ a {
 .subtext-first-section {
     color: #E5E7EB;
     font-size: 18px;
-    padding: 12px 0;
+
+    padding: 14px 0px;
+    min-width: 330px;
 }
 
 .button-first-section {
@@ -179,7 +193,7 @@ a {
     height: 60%;
     flex-direction: column;
 
-    min-width: 1000px;
+    min-width: 600px;
 }
 
 .quote {
@@ -187,6 +201,8 @@ a {
     color: #1F2937;
     font-style: italic;
     padding-bottom: 10px;
+    display: flex;
+    flex-shrink: 1;
 }
 
 .author {
