--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
+* {
+    padding: 0;
+    margin: 0;
+}
+
 
 html {
     font-family: 'Roboto', sans-serif;
 
-    margin: 0;
-    
     min-width: 920px;
 }
 
@@ -120,6 +123,7 @@ a {
     color: white;
     font-size: 15px;
     padding: 4px 22px;
+    cursor: pointer;
 }
 
 
@@ -260,13 +264,14 @@ a {
 }
 
 .sign-up-button {
-    width: 65px;
-    height: 20px;
+    width: 85px;
+    height: 30px;
     border-radius: 4px;
     border: 1px solid white;
     background-color: #3882F6;
     color: white;
     font-size: 10px;
+    cursor: pointer;
 }
 
 
